--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "course-hydrogen",
   "description": "This the default template for Hydrogen",
-  "version": "0.10.1",
+  "version": "0.11.0",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -11,9 +11,9 @@
     "lint:css": "stylelint ./src/**/*.{css,sass,scss}",
     "build": "yarn build:client && yarn build:server && yarn build:worker",
     "build:client": "vite build --outDir dist/client --manifest",
-    "build:server": "vite build --outDir dist/server --ssr src/entry-server.jsx",
-    "build:worker": "cross-env WORKER=true vite build --outDir dist/worker --ssr worker.js",
-    "serve": "node --enable-source-maps server",
+    "build:server": "vite build --outDir dist/server --ssr @shopify/hydrogen/platforms/node",
+    "build:worker": "cross-env WORKER=true vite build --outDir dist/worker --ssr @shopify/hydrogen/platforms/worker-event",
+    "serve": "node --enable-source-maps dist/server",
     "preview": "npx @shopify/hydrogen-cli@latest preview"
   },
   "prettier": "@shopify/prettier-config",
@@ -30,19 +30,17 @@
     "prettier": "^2.3.2",
     "stylelint": "^13.13.0",
     "tailwindcss": "^3.0.0",
-    "vite": "^2.7.1"
+    "vite": "^2.8.0"
   },
   "dependencies": {
     "@headlessui/react": "^1.4.1",
-    "@shopify/hydrogen": "^0.10.1",
+    "@shopify/hydrogen": "^0.11.0",
     "body-parser": "^1.19.1",
     "compression": "^1.7.4",
-    "express": "^4.17.1",
     "graphql-tag": "^2.12.4",
     "path-to-regexp": "^6.2.0",
     "react": "0.0.0-experimental-529dc3ce8-20220124",
     "react-dom": "0.0.0-experimental-529dc3ce8-20220124",
-    "react-router-dom": "^5.2.0",
     "serve-static": "^1.14.1"
   }
 }
